tests/ui/lint/snapshots/empty_range_with_negative_end.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Empty range
   ╭─[test.lis:4:12]
 3 │ fn main() {
 4 │   for i in 0..-5 {
   ·            ──┬──
   ·              ╰── start is greater than end
 5 │     fmt.Println(i)
   ╰────
  help: Swap the bounds. Or if you meant to iterate in reverse, count down with a `while` loop · code: [lint.empty_range]
