tests/ui/lint/snapshots/empty_select_default_fires_in_while.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Empty `select` default arm in a loop
    ╭─[test.lis:10:12]
  9 │       let Some(v) = ch.receive() => { fmt.Println(v); done = true },
 10 │       _ => {},
    ·            ─┬
    ·             ╰── busy-spins
 11 │     }
    ╰────
  help: Drop the `_ =>` arm to block, or do work in it · code: [infer.empty_select_default]
